--- a/css/profile.css
+++ b/css/profile.css
@@ -364,7 +364,7 @@
 }
 
 .user-post p {
-    margin: 2.6rem 0 0 0;
+    margin: 1.6rem 0 0 0;
     line-height: 110%;
     word-wrap: break-word;
     word-break: break-word;
@@ -376,13 +376,17 @@
 }
 
 .user-post div {
-    margin-top: 4.1rem;
+    margin: 2.6rem 0 0;
     display: flex;
     align-items: end;
     justify-content: space-between;
     color: var(--else-text-color-33);
     font-size: var(--font-size-1);
     text-transform: lowercase;
+}
+
+.user-post div.post-buttons {
+    margin: 0;
 }
 
 .first-part-mobile {
