--- a/css/main.css
+++ b/css/main.css
@@ -713,7 +713,7 @@ textarea {
 #delete-from-friends {
     color: var(--error-accent-color);
     margin: 0;
-    min-height: auto;
+    min-height: inherit;
     border-radius: 0;
     max-width: none;
 }
