friends and requests pages 2

--- a/css/main.css
+++ b/css/main.css
@@ -722,7 +722,7 @@ textarea {
     display: none;
 }
 
-.friend-buttons.hide {
+.friend-buttons.hide, .friend-buttons-div.hide {
     display: none;
 }
 
