--- a/css/profile.css
+++ b/css/profile.css
@@ -105,7 +105,7 @@
 .third-part-mobile {
     display: none;
     width: 100%;
-    margin-top: 2.6rem;
+    margin-top: 1.6rem;
     cursor: pointer;
 }
 
@@ -116,7 +116,8 @@
     overflow: hidden;
 }
 
-.third-part-mobile span, .third-part span {
+.third-part-mobile span,
+.third-part span {
     color: var(--else-text-color-50);
 }
 
@@ -139,16 +140,7 @@
     transition: 0.2s;
 }
 
-.profile__posts {
-    padding-top: 2.6rem;
-}
-
-.profile__comments {
-    padding-bottom: 2.6rem;
-}
-
 .profile__edit {
-    padding: 2.6rem;
     border-radius: 2rem;
     color: var(--main-text-color);
 }
@@ -206,7 +198,7 @@
 }
 
 .profile__new-post {
-    margin-top: 6.6rem;
+    margin-top: 4.1rem;
 }
 
 .profile__new-post form {
@@ -475,7 +467,7 @@
 .user-friends {
     box-shadow: var(--shadow-small);
     border-radius: 2rem;
-    margin-top: 2.6rem;
+    margin-top: 1.6rem;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -514,7 +506,6 @@
 .friends-info div svg,
 .requests div svg,
 .profile__edit svg {
-    transform: rotate(180deg);
     min-height: 13px;
     max-height: 13px;
     fill: var(--else-text-color-50);
@@ -610,6 +601,13 @@
         min-height: 50px;
         max-width: 50px;
         max-height: 50px;
+    }
+
+    .friends-info div svg,
+    .requests div svg,
+    .profile__edit svg {
+        min-height: 10px;
+        max-height: 10px;
     }
 }
 
